--- a/views/admin/admin_login.ejs
+++ b/views/admin/admin_login.ejs
@@ -1,3 +1,5 @@
-<input type="text" name="admin-username" id="admin-username">
-<input type="password" name="" id="admin-password">
-<button id="login-admin">giriş</button>
+<div class="login-form">
+    <input type="text" name="admin-username" id="admin-username">
+    <input type="password" name="" id="admin-password">
+    <button class="admin-btn" id="login-admin">giriş</button>
+</div>
