--- a/views/admin/post_process.ejs
+++ b/views/admin/post_process.ejs
@@ -1,17 +1,15 @@
 <div id="add-post">
     <input type="text" name="" id="add-post-header" placeholder="post başlığı">
-    <input type="text" name="" id="add-post-description" placeholder="post yazısı">
+
     <input type="text" name="" id="add-post-img" placeholder="post resmi">
+    <input type="text" name="" id="add-post-description" placeholder="post yazısı">
     <input type="button" id="add-post-btn" value="Tamamla">
 </div>
 <div id="update-post">
-    <input type="text" name="" id="update-post-header" placeholder="post başlığı">
-    <input type="text" name="" id="update-post-description" placeholder="post yazısı">
-    <input type="text" name="" id="update-post-img" placeholder="post resmi">
-    <input type="button" id="update-post-btn" value="Tamamla">
+    <input type="text" class="list-input-text" name="" id="update-post-header">
+    <input type="button" class="admin-btn" id="delete-post-btn" value="SİL">
 </div>
 <div id="delete-post">
-    <input type="text" name="" id="delete-post-header">
-
-    <input type="button" id="delete-post-btn" value="SİL">
+    <input type="text" class="list-input-text" name="" id="delete-post-header">
+    <input type="button" class="admin-btn" id="delete-post-btn" value="SİL">
 </div>
