--- a/views/admin-login.ejs
+++ b/views/admin-login.ejs
@@ -16,9 +16,9 @@
     <noscript>
         <h1 class="text-danger">FUCK OFF</h1>
     </noscript>
-    <form action="" method="post" action="/admin">
-        <input class="input-group-text" type="text" name="admin-username" id="admin-username">
-        <input class="input-group-text" type="password" name="" id="admin-password">
+    <form action="" method="post" action="/admin/post-process">
+        <input class="input-group-text" type="text" name="adminName" id="admin-username">
+        <input class="input-group-text" type="password" name="adminPassword" id="admin-password">
         <input type="submit" class="btn btn-danger" id="login-admin" value="Login" />
     </form>
     <!-- Optional JavaScript -->
@@ -32,6 +32,20 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script>
+        let loginBtn = document.getElementById("login-admin");
+        let adminNameTbx = document.getElementById("admin-username");
+        let adminPasswordTbx = document.getElementById("admin-password");
+        loginBtn.addEventListener("click", () => {
+            if (adminNameTbx.value == "admin" && adminPasswordTbx.value == "admin") {
+                console.log("giriş yapıldı");
+                window.location.href = "/post-process"
+            }
+            else {
+                console.log("sg");
+            }
+        })
+    </script>
 </body>
 
 </html>
