--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,5 +1,58 @@
-<form action="">
-    <input type="text" name="" required placeholder="Ad Soyad" id="fullname">
-    <input type="email" name="" required placeholder="email adresiniz" id="email">
-    <button id="register-btn">Tamamla</button>
-</form>
+<div class="card o-hidden border-0 shadow-lg my-5">
+    <div class="card-body p-0">
+        <!-- Nested Row within Card Body -->
+        <div class="row">
+            <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+            <div class="col-lg-7">
+                <div class="p-5">
+                    <div class="text-center">
+                        <h1 class="h4 text-gray-900 mb-4">Kullanıcı Oluşturun</h1>
+                    </div>
+                    <form class="user" action="/register" method="post">
+                        <div class="form-group row">
+                            <div class="col-sm-6 mb-3 mb-sm-0">
+                                <input type="text" name="ad" class="form-control form-control-user"
+                                    id="exampleFirstName" placeholder="Adınız">
+                            </div>
+                            <div class="col-sm-6">
+                                <input type="text" name="soyad" class="form-control form-control-user"
+                                    id="exampleLastName" placeholder="Soyadınız">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" name="email" class="form-control form-control-user"
+                                id="exampleInputEmail" placeholder="Email Adresiniz">
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-sm-6 mb-3 mb-sm-0">
+                                <input type="password" name="sifre" class="form-control form-control-user"
+                                    id="exampleInputPassword" placeholder="Şifreniz">
+                            </div>
+                            <div class="col-sm-6">
+                                <input type="password" name="resifre" class="form-control form-control-user"
+                                    id="exampleRepeatPassword" placeholder="Şifrenizi tekrarlayın">
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-user btn-block">
+                            Kullanıcı Oluştur
+                        </button>
+                        <hr>
+                        <a href="index.html" class="btn btn-google btn-user btn-block">
+                            <i class="fab fa-google fa-fw"></i> Google ile kaydolun
+                        </a>
+                        <a href="index.html" class="btn btn-facebook btn-user btn-block">
+                            <i class="fab fa-facebook-f fa-fw"></i> Facebook ile kaydolun
+                        </a>
+                    </form>
+                    <hr>
+                    <div class="text-center">
+                        <a class="small" href="forgot-password.html">Şifreni mi unuttun</a>
+                    </div>
+                    <div class="text-center">
+                        <a class="small" href="login.html">Zaten bir kullanıcı kaydınız varmı. Giriş yapın</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
