--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -11,16 +11,16 @@
                     <div class="col-lg-6">
                         <div class="p-5">
                             <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                                <h1 class="h4 text-gray-900 mb-4">Oİ !</h1>
                             </div>
-                            <form class="user">
+                            <form class="user" action="/login" method="post">
                                 <div class="form-group">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                        aria-describedby="emailHelp" placeholder="Enter Email Address...">
+                                    <input type="email" name="email" class="form-control form-control-user"
+                                        id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Oİ !">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control form-control-user"
-                                        id="exampleInputPassword" placeholder="Password">
+                                    <input type="password" name="sifre" class="form-control form-control-user"
+                                        id="exampleInputPassword" placeholder="Oİ!">
                                 </div>
                                 <div class="form-group">
                                     <div class="custom-control custom-checkbox small">
@@ -29,9 +29,9 @@
                                             Me</label>
                                     </div>
                                 </div>
-                                <a href="index.html" class="btn btn-primary btn-user btn-block">
-                                    Login
-                                </a>
+                                <button type="submit" href="index.html" class="btn btn-primary btn-user btn-block">
+                                    Oİ!
+                                </button>
                                 <hr>
                                 <a href="index.html" class="btn btn-google btn-user btn-block">
                                     <i class="fab fa-google fa-fw"></i> Login with Google
@@ -42,10 +42,10 @@
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                <a class="small" href="/forgot-password">Forgot Password?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" href="register.html">Create an Account!</a>
+                                <a class="small" href="/register">Create an Account!</a>
                             </div>
                         </div>
                     </div>
