--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -6,35 +6,35 @@
             <div class="col-lg-7">
                 <div class="p-5">
                     <div class="text-center">
-                        <h1 class="h4 text-gray-900 mb-4">Kullanıcı Oluşturun</h1>
+                        <h1 class="h4 text-gray-900 mb-4">Oİ !</h1>
                     </div>
                     <form class="user" action="/register" method="post">
                         <div class="form-group row">
                             <div class="col-sm-6 mb-3 mb-sm-0">
                                 <input type="text" name="ad" class="form-control form-control-user"
-                                    id="exampleFirstName" placeholder="Adınız">
+                                    id="exampleFirstName" placeholder="Oİ !">
                             </div>
                             <div class="col-sm-6">
                                 <input type="text" name="soyad" class="form-control form-control-user"
-                                    id="exampleLastName" placeholder="Soyadınız">
+                                    id="exampleLastName" placeholder="Oİ!">
                             </div>
                         </div>
                         <div class="form-group">
                             <input type="email" name="email" class="form-control form-control-user"
-                                id="exampleInputEmail" placeholder="Email Adresiniz">
+                                id="exampleInputEmail" placeholder="Oİ@">
                         </div>
                         <div class="form-group row">
                             <div class="col-sm-6 mb-3 mb-sm-0">
                                 <input type="password" name="sifre" class="form-control form-control-user"
-                                    id="exampleInputPassword" placeholder="Şifreniz">
+                                    id="exampleInputPassword" placeholder="Oİ*">
                             </div>
                             <div class="col-sm-6">
                                 <input type="password" name="resifre" class="form-control form-control-user"
-                                    id="exampleRepeatPassword" placeholder="Şifrenizi tekrarlayın">
+                                    id="exampleRepeatPassword" placeholder="Oİ**">
                             </div>
                         </div>
                         <button type="submit" class="btn btn-primary btn-user btn-block">
-                            Kullanıcı Oluştur
+                            Oİ!!
                         </button>
                         <hr>
                         <a href="index.html" class="btn btn-google btn-user btn-block">
@@ -46,10 +46,10 @@
                     </form>
                     <hr>
                     <div class="text-center">
-                        <a class="small" href="forgot-password.html">Şifreni mi unuttun</a>
+                        <a class="small" href="/forgot-password">Şifreni mi unuttun</a>
                     </div>
                     <div class="text-center">
-                        <a class="small" href="login.html">Zaten bir kullanıcı kaydınız varmı. Giriş yapın</a>
+                        <a class="small" href="/login">Zaten bir kullanıcı kaydınız varmı. Giriş yapın</a>
                     </div>
                 </div>
             </div>
