--- a/src/views/forgot_password.ejs
+++ b/src/views/forgot_password.ejs
@@ -11,25 +11,24 @@
                     <div class="col-lg-6">
                         <div class="p-5">
                             <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-2">Forgot Your Password?</h1>
-                                <p class="mb-4">We get it, stuff happens. Just enter your email address below
-                                    and we'll send you a link to reset your password!</p>
+                                <h1 class="h4 text-gray-900 mb-2">Oİ ??!**</h1>
+                                <p class="mb-4">Oİ</p>
                             </div>
-                            <form class="user">
+                            <form class="user" action="/forgot-password" method="post">
                                 <div class="form-group">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                        aria-describedby="emailHelp" placeholder="Enter Email Address...">
+                                    <input type="email" name="email" class="form-control form-control-user"
+                                        id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Oİ@!">
                                 </div>
-                                <a href="login.html" class="btn btn-primary btn-user btn-block">
-                                    Reset Password
-                                </a>
+                                <button type="submit" class="btn btn-primary btn-user btn-block">
+                                    Oİ@@!!
+                                </button>
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" href="register.html">Create an Account!</a>
+                                <a class="small" href="/register">Üyelik oluştur.</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" href="login.html">Already have an account? Login!</a>
+                                <a class="small" href="/login">Zaten bir üyeliğin varmı. Giriş yap!</a>
                             </div>
                         </div>
                     </div>
