--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -58,9 +58,11 @@
     </main>
     <div class="footer-basic">
         <footer>
-            <div class="social"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a><a href="#"><i
-                        class="fa fa-linkedin" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter"
-                        aria-hidden="true"></i></a><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <div class="social"><a href="https://www.instagram.com/berkay.js_dev/"><i class="fa fa-instagram"
+                        aria-hidden="true"></i></a><a href="https://www.linkedin.com/in/berkay-sara%C3%A7-22159b241/"><i
+                        class="fa fa-linkedin" aria-hidden="true"></i></a><a
+                    href="https://twitter.com/javascript_dev0"><i class="fa fa-twitter" aria-hidden="true"></i></a><a
+                    href="https://github.com/BerkaySarac-hub"><i class="fa fa-github" aria-hidden="true"></i></a>
             </div>
 
             <p class="copyright">BRS YAZILIM © 2022</p>
@@ -79,6 +81,19 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/61434cf925.js" crossorigin="anonymous"></script>
     <script id="pixel-chaty" async="true" src="https://cdn.chaty.app/pixel.js?id=lL9jlaqI"></script>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/632ce52e37898912e96ac8ff/1gdjlug47';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 
 </body>
 
