--- a/src/views/layout/yonetim_layout.ejs
+++ b/src/views/layout/yonetim_layout.ejs
@@ -33,9 +33,7 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
-                </div>
+
                 <div class="sidebar-brand-text mx-3">BRS ADMİN VERY CLEAR AND SİMPLE </div>
             </a>
 
@@ -44,33 +42,30 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="/yonetim/gosterge">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span></a>
+                    <span>Gösterge paneli</span></a>
             </li>
-
-
-
-            <!-- Heading -->
-            <div class="sidebar-heading">
-                Addons
-            </div>
-
-            <!-- Nav Item - Pages Collapse Menu -->
-
-
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="/yonetim/istatistik">
                     <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Charts</span></a>
+                    <span>İstatistikler</span></a>
             </li>
-
-            <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
+                <a class="nav-link" href="yonetim/post-ekle">
+                    <i class="fas fa-fw fa-address-card"></i>
+                    <span>Post ekle</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="yonetim/post-duzenle">
+                    <i class="fas fa-fw fa-newspaper"></i>
+                    <span>Post düzenle</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="yonetim/post-sil">
+                    <i class="fas fa-fw fa-trash-restore"></i>
+                    <span>Post sil</span></a>
             </li>
 
             <!-- Divider -->
@@ -156,7 +151,19 @@
 
     <!-- Custom scripts for all pages-->
     <script src="admin/js/sb-admin-2.min.js"></script>
-
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/632ce52e37898912e96ac8ff/1gdjlug47';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 
 </html>
