making dinamic front end

--- a/src/views/layout/yonetim_layout.ejs
+++ b/src/views/layout/yonetim_layout.ejs
@@ -42,30 +42,26 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="/yonetim/gosterge">
+                <a class="nav-link" href="https://dashboard.tawk.to/#/monitoring/632ce52e37898912e96ac8ff">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Gösterge paneli</span></a>
             </li>
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="/yonetim/istatistik">
+                <a class="nav-link" href="https://dashboard.tawk.to/#/monitoring/632ce52e37898912e96ac8ff">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>İstatistikler</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="yonetim/post-ekle">
+                <a class="nav-link" href="/yonetim/post-ekle">
                     <i class="fas fa-fw fa-address-card"></i>
                     <span>Post ekle</span></a>
             </li>
+
             <li class="nav-item">
-                <a class="nav-link" href="yonetim/post-duzenle">
-                    <i class="fas fa-fw fa-newspaper"></i>
-                    <span>Post düzenle</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="yonetim/post-sil">
+                <a class="nav-link" href="/yonetim/post-liste">
                     <i class="fas fa-fw fa-trash-restore"></i>
-                    <span>Post sil</span></a>
+                    <span>Post listesi</span></a>
             </li>
 
             <!-- Divider -->
@@ -151,19 +147,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="admin/js/sb-admin-2.min.js"></script>
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-        (function () {
-            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-            s1.async = true;
-            s1.src = 'https://embed.tawk.to/632ce52e37898912e96ac8ff/1gdjlug47';
-            s1.charset = 'UTF-8';
-            s1.setAttribute('crossorigin', '*');
-            s0.parentNode.insertBefore(s1, s0);
-        })();
-    </script>
-    <!--End of Tawk.to Script-->
+
 </body>
 
 </html>
