--- a/src/views/post_ekle.ejs
+++ b/src/views/post_ekle.ejs
@@ -1,7 +1,6 @@
 <form action="/yonetim/post-ekle" method="post">
-
     <input type="text" name="post_header" placeholder="post başlığı" id="post-header">
-    <input type="text" name="post_description" placeholder="post açıklaması" id="post-description">
+    <textarea cols="50" name="post_description" placeholder="post açıklaması" id="post-description"></textarea>
     <input type="file" name="post_img" id="post_img"></input>
     <input type="text" placeholder="post url" name="post_url" id="post_url">
     <input type="submit" value="TAMAMLA" id="tamamla_btn">
