--- a/src/views/posts.ejs
+++ b/src/views/posts.ejs
@@ -9,7 +9,7 @@
             <p class="post-description">
                 <%= post_el.post_details %>
             </p>
-            <a class="post-url-btn" href=<%=post_el.post_url %> >Devamını oku..</a>
+            <a class="post-url-btn" href=<%=post_el._id %> >Devamını oku..</a>
         </div>
         <% }) %>
 </div>
