--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,6 +10,12 @@ body {
   background-size: 100%;
   background-attachment: fixed;
 }
+#post-heading {
+  color: black;
+}
+#post-description {
+  color: black;
+}
 #bg-image {
   width: 100%;
   height: 100%;
