--- a/src/views/post-page.ejs
+++ b/src/views/post-page.ejs
@@ -1,6 +1,7 @@
 <h1 id="post-heading">
-    <%= post.post_header %>
+    <%- post.post_header %>
+
 </h1>
 <p id="post-description">
-    <%= post.post_description %>
+    <%- post.post_description %>
 </p>
