responsive and transfer to atlas

--- a/src/views/layout/yonetim_layout.ejs
+++ b/src/views/layout/yonetim_layout.ejs
@@ -57,6 +57,11 @@
                     <i class="fas fa-fw fa-address-card"></i>
                     <span>Post ekle</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/yonetim/proje-ekle">
+                    <i class="fas fa-fw fa-address-card"></i>
+                    <span>Proje ekle</span></a>
+            </li>
 
             <li class="nav-item">
                 <a class="nav-link" href="/yonetim/post-liste">
