--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,7 +57,7 @@ header #heading::after {
   margin-left: 5rem;
 }
 main {
-  width: 73%;
+  width: 75%;
   height: 100%;
   background-color: #ffdee9;
   background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
@@ -74,7 +74,7 @@ main {
   height: fit-content;
   display: inline-flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   font-family: "Varela Round", sans-serif;
 }
 #main-nav a {
@@ -82,7 +82,7 @@ main {
 }
 #main-nav .box {
   font-size: 1.4rem;
-  width: 18%;
+  width: 20%;
   background-color: #92f0ff;
   background-image: linear-gradient(0deg, #92f0ff 34%, #0700a4 100%);
 
@@ -107,20 +107,20 @@ main {
   background-image: linear-gradient(90deg, #74ebd5 0%, #9face6 100%);
 
   width: 29%;
-  height: 420px;
+  height: 440px;
   border-radius: 10px;
   display: inline-block;
   text-align: center;
   margin: 1rem;
   box-shadow: 0 0 2px #00d2ff;
-  padding: 0.7rem;
+  padding: 1rem;
 }
 .colorful-box {
   font-size: 1.4rem;
   width: 18%;
   background-color: #4ccfa8;
   background-image: linear-gradient(0deg, #92ffe4 34%, #8dc6f5 100%);
-
+  overflow: hidden;
   border-radius: 1px;
   height: 45px;
   color: black;
@@ -146,15 +146,22 @@ main {
 }
 .post-description {
   font-size: large;
+  font-weight: bold;
   text-align: left;
+  overflow: hidden;
+  word-wrap: break-word;
+ 
+  
+  height: 20%;
 }
 
 .post-url-btn {
   background-image: linear-gradient(
     to right,
-    #314755 0%,
+    #19e2e9 0%,
+    #314755 15%,
     #26a0da 51%,
-    #314755 100%
+    #71fdb0 100%
   );
   width: max-content;
   margin: 10px;
@@ -169,6 +176,7 @@ main {
   display: block;
   float: right;
   margin-right: 0.4rem;
+
 }
 
 .post-url-btn:hover {
@@ -287,7 +295,7 @@ main {
 }
 
 .search h3 {
-  font-weight: bold;
+  font-weight: 300;
 }
 
 .search h1,
@@ -320,7 +328,7 @@ main {
   background: transparent;
   width: 25px;
   height: 35px;
-  padding: 20px;
+  padding: 21px;
   border: solid 3px white;
   outline: none;
   border-radius: 35px;
@@ -459,4 +467,159 @@ form {
   font-size: 1.2rem;
   text-align: left;
   padding: 1.1rem;
+}
+@media screen and (max-width: 1250px) {
+  #main-nav .box {
+    font-size: 1.2rem;
+    height: 38px;
+  }
+  .post-url-btn{
+    width: 100%;
+    padding: 10px 25px;
+    height: 40px;
+    margin: 1px;
+    float: none;
+    
+  }
+  .post-header{
+    font-size: 1.8rem;
+  }
+}
+@media screen and (max-width: 1100px) {
+  
+  .post-showcase{
+    width: 40%;
+    margin: 2;
+  }
+}
+@media screen and (max-width: 950px) {
+  #logo {
+    width: 200px;
+    height: 70px;
+  }
+  header #heading {
+    font-size: 3.3rem;
+  }
+  header {
+    height: 100px;
+  }
+  #showroom-heading{
+    font-size: 2.9rem;
+  }
+  .post-showcase{
+    padding: 7px;
+    padding-bottom: 1.3rem;
+  }
+    .post-img{
+    width: 100%;
+  }
+  #post-banner {
+    border-radius: 15px;
+    width: 96%;
+    box-shadow: inset 0 0 5px #00dbde;
+  }
+  #main-banner {
+    border-radius: 15px;
+    width: 96%;
+    box-shadow: inset 0 0 5px #00dbde;
+  }
+  #contact-banner {
+    border-radius: 15px;
+    width: 96%;
+    box-shadow: inset 0 0 5px #00dbde;
+  }
+  #about-banner {
+    border-radius: 15px;
+    width: 96%;
+    box-shadow: inset 0 0 5px #00dbde;
+    margin-bottom: 1.5rem;
+  }
+  #project-banner {
+    border-radius: 15px;
+    width: 96%;
+    box-shadow: inset 0 0 5px #00dbde;
+    margin-bottom: 1.5rem;
+  }
+  .project-container{
+    display: block;
+    width: 90%;
+    height: 160px;
+  }
+  .project-header{
+    font-size: 1.4rem;
+  }
+  .project-details{
+    font-size: medium;
+  }
+
+}
+@media screen and (max-width: 750px){
+  #main-nav .box {
+    font-size: 1rem;
+    height: 25px;
+  }
+  #showroom-heading{
+    font-size: 2.1rem;
+  }
+  .post-showcase{
+    width: 44%;
+    margin: 0.5rem;
+  }
+}
+@media screen and (max-width: 650px){
+  .colorful-box{
+    font-size: medium;
+  }
+  #main-nav .box {
+    font-size: 0.8rem;
+    height: 25px;
+  }
+  .post-header{
+    font-size: 1.2rem;
+  }
+  .post-description{
+    font-size: small;
+  }
+}
+@media screen and (max-width: 600px){
+  #logo {
+    width: 110px;
+    height: 50px;
+  }
+  header #heading {
+    font-size: 2.0rem;
+  }
+}
+@media screen and (max-width: 550px){
+  #main-nav .box{
+    font-size: 0.6rem;
+    height: 20px;
+  }
+  .post-showcase{
+    font-size: 0.7rem;
+  }
+}
+@media screen and (max-width: 450px){
+  .post-showcase{
+    width: 41%;
+    margin: 0.5rem;
+  }
+  .post-showcase{
+    font-size: 0.5rem;
+  }
+  .post-url-btn{
+    height: fit-content;
+  }
+  #logo{
+    width: 70px;
+    height: 30px;
+    margin-left: 2rem;
+  }
+  header #heading{
+    font-size: 1.4rem;
+    
+  }
+  header {
+    height: 70px;
+  }
 }
